feat: add FFM vs CInterop benchmark and variadic function test
Add bench and varargs modes migrated from takoyaki's bench/ directory.

bench mode measures per-call overhead of FFM vs CInterop @CFunction
on getpid(), showing FFM ~15x slower due to return-value autoboxing
in the downcall stub.

varargs mode tests whether @CFunction can call variadic C functions
(prctl, open) by declaring them with fixed arguments. Both pass on
Linux aarch64 despite the Javadoc prohibition, because the AAPCS64
ABI passes variadic arguments in registers like fixed ones.

README rewritten in English, merging the benchmark results, error
detection comparison tables, and variadic findings.